--- a/templates/dashboard/Tutor-dashboard.html
+++ b/templates/dashboard/Tutor-dashboard.html
@@ -24,6 +24,7 @@
   <link href="{% static 'assets/css/default-dashboard/style.css' %}" rel=" stylesheet" type="text/css" />
   <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
   <link href="{% static 'Custum/mystyles.css' %}" rel=" stylesheet" type="text/css" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   {% block extra-stylesheets %}
 
   {% endblock extra-stylesheets %}
