--- a/templates/students/postAssignment.html
+++ b/templates/students/postAssignment.html
@@ -1,7 +1,7 @@
 {% extends 'dashboard/student-dashboard.html' %}
 {% load static %}
 {% block main-content %}
-<div class="w-100 mt-5">
+<div class="row mt-5">
     {% if errors %}
     <div class="alert alert-danger" role="alert">
         <div id='errorsBox'>
@@ -28,12 +28,12 @@
 
                 </div>
             </div>
-            <div class="card-body container">
+            <div class="card-body mt-4">
                 <form id='submitForm' method='post' action='' enctype='multipart/form-data'>{% csrf_token %}
                     <div class="row">
 
-                        <div class="col-md-6 col-lg-5 col-12 input-group form-group">
-                            <label class="control-label col-sm-3 col-md-4 col-5 mt-2"
+                        <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                            <label class="control-label col-sm-4 col-5 mt-2"
                                 style="color: black;">Class</label>
                             <select id="ctn" name="ctn" class="custom-select form-control w-100 col-md-8 col-sm-9 col-7"
                                 required="required" onchange="addoptions(this)">
@@ -43,8 +43,8 @@
                                 {% endfor %}
                             </select>
                         </div>
-                        <div class="col-md-6 col-lg-5 col-12 input-group form-group">
-                            <label class="control-label col-sm- col-md-4 col-5 mt-2"
+                        <div class="col-md-6 col-lg-4 col-12 input-group form-group">
+                            <label class="control-label col-sm-4 col-5 mt-2"
                                 style="color: black;">Course</label>
                             <select id="cn" name="cn" class="custom-select form-control w-100 col-md-8 col-sm-9 col-7"
                                 required="required">
@@ -52,21 +52,25 @@
                             </select>
                         </div>
 
-                        <div class="col-lg-5 col-12 col-md-6 input-group form-group">
+                        <div class="col-lg-4 col-12 col-md-6 input-group form-group">
                             <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Budget</label>
                             <input type="number" step="0.01" style="-moz-appearance: textfield;" min="0"
                                 class="form-control w-100 col-sm-8 col-7" id="budget" name="budget" placeholder="Budget"
                                 required>
                         </div>
-                        <div class="col-lg-5 col-12 col-md-6 input-group form-group">
+                        <div class="col-lg-4 col-12 col-md-6 input-group form-group">
                             <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Requirement</label>
                             <input type="number" step="0.01" style="-moz-appearance: textfield;" min="0"
                                 class="form-control w-100 col-sm-8 col-7" id="requirement" name="requirement"
                                 placeholder="Requirement" required>
                         </div>
 
-                        <div class="col-lg-3 col-md-6 col-12 input-group form-group">
-                            <input type="file" class="ml-3 mt-2 form-control-file" id="file" name="file" required>
+                        <div class="col-lg-4 col-md-6 col-12 input-group form-group">
+                            <label class="control-label col-sm-4 col-5 mt-2" style="color: black;">Choose File</label>
+                            <div class="w-100 col-sm-8 col-7">
+                            <input type="file" class="custom-file-input" id="file" name="file" required>
+                            <label class="custom-file-label" >Choose file...</label>
+                            </div>
                         </div>
 
                         <div class="col-md-12 col-lg-12 col-12 input-group form-group">
@@ -81,14 +85,16 @@
             </div>
         </div>
     </div>
-    <div class="col-xl-12 col-md-12 col-12 mt-5">
-        <div class="statbox widget box box-shadow">
-            <div class="widget-header">
+    <div class="row">
+    <div class="col-md-12 col-12 mt-5">
+        <div class="card statbox widget box box-shadow">
+            <div class="card-header">
                 <div class="row">
-                    <div class="col-xl-12 col-md-12 col-12">
-                        <h4 class="p-2" style="color:black;"><b>Assignments</b></h4>
+                        <div class="col-sm-10">
+                            <h2 style="color: black;">Assignments</h2>
+                        </div>
+    
                     </div>
-                </div>
             </div>
             {% if student.PostAssignment.all %}
             <div class="widget-content widget-content-area">
@@ -101,9 +107,9 @@
                             <th>Requirement</th>
                             <th>Created</th>
                             <th>Budget</th>
-                            <th>Assigned</th>
-                            <th>Action</th>
-                            <th></th>
+                            <th class="text-center">Assigned</th>
+                            <th class="text-center">Action</th>
+                            <th class="text-center">View</th>
                         </tr>
                         {% for assing in student.PostAssignment.all reversed %}
                         <tr>
@@ -114,13 +120,13 @@
                             <td>{{assing.timestamp}}</td>
                             <td>{{assing.budget}}</td>
                             {% if i.assigned == True %}
-                            <td><i class="flaticon-user-check"></i></td>
+                            <td class="text-center"><i class="flaticon-user-check"></i></td>
                             {% else %}
-                            <td><i class="btn btn-info flaticon-time-1"></i></td>
+                            <td class="text-center"><i class="btn btn-info flaticon-time-1"></i></td>
                             {% endif %}
-                            <td><a href="{% url 'Delete_Assignment' assing.sno %}"><span
+                            <td class="text-center"><a href="{% url 'Delete_Assignment' assing.sno %}"><span
                                         class="btn btn-danger flaticon-delete-4"></span></a></td>
-                            <td><button type="button" data-toggle="modal" data-target="#tutorModal{{assing.sno}}"
+                            <td class="text-center"><button type="button" data-toggle="modal" data-target="#tutorModal{{assing.sno}}"
                                     class="btn btn-info">View</button></td>
                         </tr>
 
@@ -174,6 +180,7 @@
             {% endif %}
         </div>
     </div>
+</div>
 </div>
 
 
