--- a/templates/Exam/addExam.html
+++ b/templates/Exam/addExam.html
@@ -13,7 +13,7 @@
 </style>
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
-<div class="container">
+<div class="mt-5">
     {% if messages %}
     {% for k in messages%}
     <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
@@ -24,142 +24,145 @@
     </div>
     {% endfor %}
     {% endif %}
-    <div class="container" id="card">
-      <h3 style="align-items: center;text-align: center;">Add Exam</h3>
-      <hr>
-     <form method="post">{% csrf_token %}
-      <div class="row">
+    <div id="card">
+    <h3 style="align-items: center;text-align: center;">Add Exam</h3>
+    <hr>
+    <form id="frm" method="post">{% csrf_token %}
+      <div class="mx-2 row" id="INSTBATCH">
         <div class="col">
-      <label for="validationCustom01"><strong>Select Course<span class="red">*</span></strong></label>
-          <select id="select_course" name="course" style="width: 100%" class="js-example-basic-single">
-              <option class="form-control form-control-lg" selected disabled value="" name="category">Select Course</option>
-              {% for cat in courses %}
-              <option class="form-control form-control-lg" value="{{cat.id}}" name="category">{{cat.courseName}} </option>
-              {% endfor %}
-            </select>
+          <label for="validationCustom01"><strong>Select Course<span class="red">*</span></strong></label>
+          <select id="select_course" name="course" style="width: 100%" class="js-example-basic-single form-control" onchange="selectcourse()">
+            <option class="form-control form-control-lg" selected disabled value="">Select Course</option>
+            {% for course in courses %}
+            <option class="form-control form-control-lg" value="{{course.id}}">{{course.courseName}} </option>
+            {% endfor %}
+          </select>
         </div>
         <div class="col">
-      <label for="validationCustom01"><strong>Select Class <span class="red">*</span></strong></label>
-          <select id="class_select" name="class" style="width: 100%;" class="js-example-basic-single">
-              <option class="form-control" selected disabled value="">Select Class</option>
-            </select>
+          <label for="validationCustom01"><strong>Select Class <span class="red">*</span></strong></label>
+          <select id="class_select" name="class" style="width: 100%;" class="js-example-basic-single form-control">
+            <option class="form-control" selected disabled value="">Select Class</option>
+          </select>
         </div>
         <div class="col">
-      <label for="validationCustom01"><strong>Select Batch <span class="red">*</span></strong></label>
-          <select id="batch_select" name="batch" style="width: 100%;" class="js-example-basic-single">
-              <option class="form-control" selected disabled value="">Select Batch</option>
-              {% for cat in batch %}
-              <option class="form-control" value="{{cat.batchName}}">{{cat.batchName}}</option>
-              {% endfor %}
-            </select>
+          <label for="validationCustom01"><strong>Select Batch <span class="red">*</span></strong></label>
+          <select id="batch_select" name="batch" style="width: 100%;" class="js-example-basic-single form-control">
+            <option class="form-control" selected disabled value="">Select Batch</option>
+            {% for cat in batch %}
+            <option class="form-control" value="{{cat.batchName}}">{{cat.batchName}}</option>
+            {% endfor %}
+          </select>
         </div>
+      
       </div>
-      <div class="row mt-4"> 
-           <div class="col">
+      <div class="mx-2 row mt-4">
+        <div class="col">
           <label for="validationCustom01"><strong>Exam Name <span class="red">*</span></strong></label>
 
-      <input type="text" class="form-control" placeholder="Exam name" name="examname">
-    </div>
-    <div class="col">
-      <label for="validationCustom01"><strong>Exam Date <span class="red">*</span></strong></label>
-      <input class="form-control" type="date" placeholder="" name="date" required /><br />
-      <div class="invalid-feedback">
-              Select a valid Date!
-      </div>
-    </div>
-              <div class="col">
-            <label for="validationCustom01"><strong>Exam Time <span class="red">*</span></strong></label>
-            <input class="form-control" type="time" placeholder="" name="exam_time" required /><br />
-            <div class="invalid-feedback">
-              Select a valid Time!
-            </div>
+          <input type="text" class="form-control" placeholder="Exam name" name="examname" required>
+        </div>
+        <div class="col">
+          <label for="validationCustom01"><strong>Exam Date <span class="red">*</span></strong></label>
+          <input class="form-control" type="date" placeholder="" name="date" required /><br />
+          <div class="invalid-feedback">
+            Select a valid Date!
           </div>
-      </div>
-      <div class="row">
-          <div class="col">
-            <label for="validationCustom01"><strong>Time Zone<span class="red">*</span></strong></label>
-            {% include 'tutor/timezones.html' %}
+        </div>
+        <div class="col">
+          <label for="validationCustom01"><strong>Exam Time <span class="red">*</span></strong></label>
+          <input class="form-control" type="time" placeholder="" name="exam_time" required /><br />
+          <div class="invalid-feedback">
+            Select a valid Time!
           </div>
-                   <div class="col-md-4 mb-3">
-            <label for="validationCustom01"><strong>Exam Duration(In Minute) <span class="red">*</span></strong></label>
-            <input class="form-control" type="number" min="0" placeholder="00" name="duration" required />
-            <div class="invalid-feedback">
-              Enter a valid value!
-            </div>
-          </div>
-          <div class="col-md-4 mb-3 ">
-            <label for="validationCustom01"><strong>Passing Percentage <span class="red">*</span></strong></label>
-            <input class="form-control" type="number" min="0" placeholder="00" name="pp" required />
-            <div class="invalid-feedback">
-              Enter a valid value!
-            </div>
-          </div>
-      </div>
-            <div class="row">
-          <div class="col-md-4 mb-3 ">
-            <label for="validationCustom01"><strong>No of Questions <span class="red">*</span></strong></label>
-            <input class="form-control" type="number" min="0" placeholder="0" name="noquestions" required />
-            <div class="invalid-feedback">
-              Enter a valid value!
-            </div>
-          </div>
-     <div class="col-md-4">
-      <label for="validationCustom01"><strong>Exam Status <span class="red">*</span></strong></label>
-         <select class="form-control" id="exampleFormControlSelect1" name="status">
-      <option value="1">Activate</option>
-      <option value="0">Deactivate</option>
-    </select>
-    </div>
-         <div class="col-md-4">
-      <label for="validationCustom01"><strong>Exam Validity <span class="red">*</span></strong></label>
-      <input class="form-control" type="date" placeholder="" name="redate" required /><br />
-      <div class="invalid-feedback">
-              Select a valid Date!
-      </div>
-    </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12 mb-3 ">
-            <label for="validationCustom01"><strong>Terms & Condition <span class="red">*</span></strong></label>
-            <textarea class="form-control" rows="4" name="tc" required></textarea>
-            <div class="invalid-feedback">
-              Terms & Condition cannot be empty!
-            </div>
         </div>
       </div>
-      <div class="row">
-                  <div class="col-lg-12 mb-3 ">
-            <div class="custom-checkbox custom-control">
-              <input class="form-check-input" type="checkbox" id="defaultCheck1" name="calculator" />
-              <label class="form-check-label" for="defaultCheck1">
-                Make Calculator Available
-              </label>
-            </div>
+      <div class="mx-2 row">
+        <div class="col">
+          <label for="validationCustom01"><strong>Time Zone<span class="red">*</span></strong></label>
+          {% include 'tutor/timezones.html' %}
+        </div>
+        <div class="col-md-4 mb-3">
+          <label for="validationCustom01"><strong>Exam Duration(In Minute) <span class="red">*</span></strong></label>
+          <input class="form-control" type="number" min="0" placeholder="00" name="duration" required />
+          <div class="invalid-feedback">
+            Enter a valid value!
           </div>
-          <div class="col-lg-2 col-sm-2 mb-3">
-            <div class="custom-checkbox custom-control">
-              <input class="form-check-input" type="checkbox" onchange="checkbox()" id="negativecheck" name="nm" />
-              <label class="form-check-label" for="defaultCheck1">
-                Negative Marks
-              </label>
-              <div id="negative"></div>
-            </div>
-            <div class="invalid-feedback">
-              Choose a value
-            </div>
+        </div>
+        <div class="col-md-4 mb-3 ">
+          <label for="validationCustom01"><strong>Passing Percentage <span class="red">*</span></strong></label>
+          <input class="form-control" type="number" min="0" placeholder="00" name="pp" required />
+          <div class="invalid-feedback">
+            Enter a valid value!
           </div>
-          <div class="col-lg-2 col-sm-2 mb-3">
-            <div class="custom-checkbox custom-control">
-              <input class="form-check-input" type="checkbox" onchange="" id="uploadimages" name="imguplod" />
-              <label class="form-check-label" for="defaultCheck1">
-                Upload images
-              </label>
-            </div>
-          </div>
+        </div>
       </div>
+      <div class=" mx-2 row">
+        <div class="col-md-4 mb-3 ">
+          <label for="validationCustom01"><strong>No of Questions</strong></label>
+          <input class="form-control" type="number" min="0" placeholder="0" name="noquestions" />
+          <div class="invalid-feedback">
+            Enter a valid value!
+          </div>
+        </div>
+        <div class="col-md-4">
+          <label for="validationCustom01"><strong>Exam Status <span class="red">*</span></strong></label>
+          <select class="form-control" id="exampleFormControlSelect1" name="status">
+            <option value="1">Activate</option>
+            <option value="0">Deactivate</option>
+          </select>
+        </div>
+        <div class="col-md-4">
+          <label for="validationCustom01"><strong>Exam Validity <span class="red">*</span></strong></label>
+          <input class="form-control" type="date" placeholder="" name="redate" required /><br />
+          <div class="invalid-feedback">
+            Select a valid Date!
+          </div>
+        </div>
+      </div>
+      <div class="mx-2 row">
+        <div class="col-lg-12 mb-3 ">
+          <label for="validationCustom01"><strong>Terms & Condition <span class="red">*</span></strong></label>
+          <textarea class="form-control" rows="4" name="tc" required></textarea>
+          <div class="invalid-feedback">
+            Terms & Condition cannot be empty!
+          </div>
+        </div>
+      </div>
+      <div class="mx-2 row">
+        <div class="col-lg-12 mb-3 ">
+          <div class="custom-checkbox custom-control">
+            <input class="form-check-input" type="checkbox" id="defaultCheck1" name="calculator" />
+            <label class="form-check-label" for="defaultCheck1">
+              Make Calculator Available
+            </label>
+          </div>
+        </div>
+        <div class="col-lg-2 col-sm-2 mb-3">
+          <div class="custom-checkbox custom-control">
+            <input class="form-check-input" type="checkbox" onchange="checkbox()" id="negativecheck" name="nm" />
+            <label class="form-check-label" for="defaultCheck1">
+              Negative Marks
+            </label>
+            <div id="negative"></div>
+          </div>
+          <div class="invalid-feedback">
+            Choose a value
+          </div>
+        </div>
+        <div class="col-lg-2 col-sm-2 mb-3">
+          <div class="custom-checkbox custom-control">
+            <input class="form-check-input" type="checkbox" onchange="" id="uploadimages" name="imguplod" />
+            <label class="form-check-label" for="defaultCheck1">
+              Upload images
+            </label>
+          </div>
+        </div>
+      </div>
+      <div class="text-center">
       <button type="submit" class="btn btn-primary"> Save </button>
-</form>
     </div>
+    </form>
+  </div>
 
     <script>
         function checkbox() {
@@ -188,8 +191,8 @@ $(document).ready(function() {
     $('.js-example-basic-single').select2();
 });
 
-   $("#select_course").change(function () {
-    var selected = $(this).val();
+   function selectcourse() {
+    var selected = $('#select_course').val();
     console.log(selected)
     $.ajax({
       url: "{% url 'classes' %}",
@@ -210,6 +213,10 @@ $(document).ready(function() {
         }
       },
     });
+  }
+
+  $(window).on('pageshow', ()=>{ var frm = $('#frm');
+    frm[0].reset();
   });
     </script>
 
