--- a/templates/Exam/addQuestionsTutor.html
+++ b/templates/Exam/addQuestionsTutor.html
@@ -25,11 +25,11 @@
   {% endif %}
   <div>
     <div class="col-xl-12 col-md-12 col-12 mt-5">
-            <div class="statbox widget box box-shadow">
-                <div class="widget-header">
+            <div class="card statbox widget box box-shadow">
+                <div class="card-header">
                     <div class="row">
                         <div class="col-xl-12 col-md-12 col-12">
-                            <h4 class="p-2" style="color:black;"><b>List of Exams</b></h4>
+                            <h2 style="color:black;">List of Exams</h2>
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                      <form action="" method="post">{% csrf_token %}
                         <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
                             <tr>
-                                <th>##</th>
+                                <th>#</th>
                                 <th>Exam Name</th>
                                 <th>Course</th>
                                 <th>Batch</th>
@@ -51,7 +51,7 @@
                                 <th>Exam Duration</th>
                                 <th>Total No. of Questions</th>
                                 <th>Pass Percentage</th>
-                                <th colspan="2">Add Question</th>
+                                <th class="text-center" colspan="2">Add Question</th>
                             </tr>
                             {% for exam in exams %}
                             {% for i in exam %}
@@ -64,7 +64,7 @@
                                 <td>{{i.exam_duration}}</td>
                                 <td>{{i.question_count}}</td>
                                 <td>{{i.pass_percentage}}</td>
-                                <td>
+                                <td class="text-center">
                                 <a href="{% url 'questions' i.id %}" class="btn btn-info p-1">Add Question</a>
                                 </td>
                             </tr>
@@ -88,7 +88,7 @@
                                 <th>Exam Duration</th>
                                 <th>Total No. of Questions</th>
                                 <th>Pass Percentage</th>
-                                <th colspan="2">Add Questions</th>
+                                <th class="text-center" colspan="2">Add Questions</th>
                             </tr>
                             {% for i in tutorexams %}
                             <tr>
@@ -104,7 +104,7 @@
                                 <td>{{i.exam_duration}}</td>
                                 <td>{{i.question_count}}</td>
                                 <td>{{i.pass_percentage}}</td>
-                                <td><a href="{% url 'createquestionstutor' i.id %}" class="btn btn-info p-1">Add Question</a></td>
+                                <td class="text-center"><a href="{% url 'createquestionstutor' i.id %}" class="btn btn-info p-1">Add Question</a></td>
                             </tr>
                             {% endfor %}
                         </table>
@@ -113,5 +113,6 @@
                 </div>
             </div>
         </div>
+</div>
 </div>
 {% endblock main-content %}
