--- a/templates/Exam/editExamQuestionsTutor.html
+++ b/templates/Exam/editExamQuestionsTutor.html
@@ -15,11 +15,11 @@
     {% endfor %}
     {% endif %}
     <div class="col-xl-12 col-md-12 col-12 mt-5">
-            <div class="statbox widget box box-shadow">
-                <div class="widget-header">
+            <div class="card statbox widget box box-shadow">
+                <div class="card-header">
                     <div class="row">
                         <div class="col-xl-12 col-md-12 col-12">
-                            <h4 class="p-2" style="color:black;"><b>List of Exams</b></h4>
+                            <h2 style="color:black;">List of Exams</h2>
                         </div>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                      <form action="" method="post">{% csrf_token %}
                         <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
                             <tr>
-                                <th>##</th>
+                                <th>#</th>
                                 <th>Exam Name</th>
                                 <th>Course</th>
                                 <th>Batch</th>
@@ -56,14 +56,14 @@
                                 <td>{{i.question_count}}</td>
                                 <td>{{i.pass_percentage}}</td>
                                 {% if i.status %}
-                                <td><a href="{% url 'toggle' i.id %}" class="btn btn-danger p-1">Deactivate</a></td>
+                                <td class="text-center"><a href="{% url 'toggle' i.id %}" class="btn btn-danger p-1">Deactivate</a></td>
                                 {% else %}
-                                <td><a href="{% url 'toggle' i.id %}" class="btn btn-info p-1">Activate</a></td>
+                                <td class="text-center"><a href="{% url 'toggle' i.id %}" class="btn btn-info p-1">Activate</a></td>
                                 {% endif %}
-                                <td>
+                                <td class="text-center">
                                     <a class="btn btn-warning" href="{% url 'editquestions' i.id %}"><i class="flaticon-pencil-line" style="font-size:medium;"></i></a>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <a class="btn btn-danger" href="{% url 'DeleteExam' i.id %}"><i class="flaticon-delete-fill" style="font-size:medium;"></i></a>
                                 </td>
                             </tr>
@@ -79,7 +79,7 @@
                         <form action="" method="post">{% csrf_token %}
                         <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
                             <tr>
-                                <th>##</th>
+                                <th>#</th>
                                 <th>Exam Name</th>
                                 <th>Course</th>
                                 <th>Price</th>
@@ -101,14 +101,14 @@
                                 <td>{{i.question_count}}</td>
                                 <td>{{i.pass_percentage}}</td>
                                 {% if i.status %}
-                                <td><a href="{% url 'tutortoggle' i.id %}" class="btn btn-danger p-1">Deactivate</a></td>
+                                <td class="text-center"><a href="{% url 'tutortoggle' i.id %}" class="btn btn-danger p-1">Deactivate</a></td>
                                 {% else %}
-                                <td><a href="{% url 'tutortoggle' i.id %}" class="btn btn-info p-1">Activate</a></td>
+                                <td class="text-center"><a href="{% url 'tutortoggle' i.id %}" class="btn btn-info p-1">Activate</a></td>
                                 {% endif %}
-                                <td>
+                                <td class="text-center">
                                     <a class="btn btn-warning" href="{% url 'editquestionstutor' i.id %}"><i class="flaticon-pencil-line" style="font-size:medium;"></i></a>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <a class="btn btn-danger" href="{% url 'DeleteTutorExam' i.id %}"><i class="flaticon-delete-fill" style="font-size:medium;"></i></a>
                                 </td>
                             </tr>
