--- a/templates/Exam/editExamTutor.html
+++ b/templates/Exam/editExamTutor.html
@@ -15,7 +15,7 @@
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-<div class="container">
+<div class="mt-5">
   {% if messages %}
   {% for k in messages%}
   <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
@@ -26,11 +26,12 @@
   </div>
   {% endfor %}
   {% endif %}
-  <div class="container" id="card">
-    <h3 style="align-items: center;text-align: center;">Add Exam</h3>
-    <hr>
-    <form method="post">{% csrf_token %}
-      <div class="row">
+  <div style="padding-top: 0;" class="class" id="card">
+    <div class="card-header">
+    <h2 style="align-items: center;text-align: center;">Edit Exam</h2>
+  </div>
+    <form class="mt-4" method="post">{% csrf_token %}
+      <div class="mx-2 row">
         <div class="col">
           <label for="validationCustom01"><strong>Select Class <span class="red">*</span></strong></label>
           <select id="class_select" name="class" style="width: 100%;" class="js-example-basic-single form-control"onchange="addoptions(this)">
@@ -51,7 +52,7 @@
           <input type="number" class="form-control" placeholder="Exam Price" value="{{exam.price}}" name="price" required>
         </div>
       </div>
-      <div class="row mt-4">
+      <div class="mx-2 row mt-4">
         <div class="col">
           <label for="validationCustom01"><strong>Exam Name <span class="red">*</span></strong></label>
           <input type="text" class="form-control" placeholder="Exam name" name="examname" value="{{exam.Name}}">
@@ -71,7 +72,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="mx-2 row">
         <div class="col">
           <label for="validationCustom01"><strong>Time Zone<span class="red"></span></strong></label>
           {% include 'tutor/timezones.html' %}
@@ -91,7 +92,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="mx-2 row">
         <div class="col-md-4 mb-3 ">
           <label for="validationCustom01"><strong>No of Questions <span class="red"></span></strong></label>
           <input class="form-control" type="number" placeholder="0" name="noquestions"
@@ -115,7 +116,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="mx-2 row">
         <div class="col-lg-12 mb-3 ">
           <label for="validationCustom01"><strong>Terms & Condition <span class="red"></span></strong></label>
           <textarea class="form-control" rows="4" name="tc">{{exam.tandc}}</textarea>
@@ -124,7 +125,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="mx-2 row">
         <div class="col-lg-12 mb-3 ">
           <div class="custom-checkbox custom-control">
             <input class="form-check-input" type="checkbox" id="defaultCheck1" {% if exam.calculator %} checked {% endif %} name="calculator"
@@ -157,7 +158,9 @@
           </div>
         </div>
       </div>
+      <div class="text-center">
       <button type="submit" class="btn btn-primary"> Save </button>
+      </div>
     </form>
   </div>
 
