--- a/templates/Exam/viewExams.html
+++ b/templates/Exam/viewExams.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block main-content %}
 <main>
-    <div class="container mt-4">
+    <div class="mt-5">
     {% if messages %}
     {% for k in messages%}
     <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
@@ -43,7 +43,7 @@
                                 <th>Total No. of Questions</th>
                                 <th>Pass Percentage</th>
                                 <th>Exam status</th>
-                                <th colspan="2">Action</th>
+                                <th class="text-center" colspan="2">Action</th>
                                 
                             </tr>
                         </thead>
@@ -65,10 +65,10 @@
                                 <td><a href="{% url 'toggle' i.id %}" class="btn btn-primary p-1">Activate</a></td>
                                 {% endif %}
                                 <td>
-                                    <a href="{% url 'EditExam' i.id %}"><i class="fas fa-edit"></i></a>
+                                    <a class="btn btn-warning" href="{% url 'EditExam' i.id %}"><i class="flaticon-pencil-line" style="font-size:medium;"></i></a>
                                 </td>
                                 <td>
-                                    <a href="{% url 'DeleteExam' i.id %}"><i class="fas fa-trash"></i></a>
+                                    <a class="btn btn-danger" href="{% url 'DeleteExam' i.id %}"><i class="flaticon-delete-fill" style="font-size:medium;"></i></a>
                                 </td>
                             </tr>
                             {% endfor %}
