--- a/templates/Exam/viewExamsTutor.html
+++ b/templates/Exam/viewExamsTutor.html
@@ -14,11 +14,11 @@
     {% endfor %}
     {% endif %}
         <div class="col-xl-12 col-md-12 col-12 mt-5">
-            <div class="statbox widget box box-shadow">
-                <div class="widget-header">
+            <div class="card statbox widget box box-shadow">
+                <div class="card-header">
                     <div class="row">
                         <div class="col-xl-12 col-md-12 col-12">
-                            <h4 class="p-2" style="color:black;"><b>List of Exams</b></h4>
+                            <h2 style="color:black;">List of Exams</h2>
                         </div>
                     </div>
                 </div>
@@ -32,7 +32,7 @@
                      <form action="" method="post">{% csrf_token %}
                         <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
                             <tr>
-                                <th>##</th>
+                                <th>#</th>
                                 <th>Exam Name</th>
                                 <th>Course</th>
                                 <th>Batch</th>
@@ -40,7 +40,7 @@
                                 <th>Exam Duration</th>
                                 <th>Total No. of Questions</th>
                                 <th>Pass Percentage</th>
-                                <th>Exam status</th>
+                                <th class="text-center">Exam status</th>
                                 <th class="text-center" colspan="4">Action</th>
                             </tr>
                             {% for exam in exams %}
@@ -55,9 +55,9 @@
                                 <td>{{i.question_count}}</td>
                                 <td>{{i.pass_percentage}}</td>
                                 {% if i.status %}
-                                <td><a href="{% url 'toggle' i.id %}" class="btn btn-danger p-1">Deactivate</a></td>
+                                <td class="text-center"><a href="{% url 'toggle' i.id %}" class="btn btn-danger p-1">Deactivate</a></td>
                                 {% else %}
-                                <td><a href="{% url 'toggle' i.id %}" class="btn btn-info p-1">Activate</a></td>
+                                <td class="text-center"><a href="{% url 'toggle' i.id %}" class="btn btn-info p-1">Activate</a></td>
                                 {% endif %}
                                 <td>
                                     <a class="btn btn-warning" href="{% url 'EditExam' i.id %}"><i class="flaticon-pencil-line" style="font-size:medium;"></i></a>
@@ -78,7 +78,7 @@
                         <form action="" method="post">{% csrf_token %}
                         <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
                             <tr>
-                                <th>##</th>
+                                <th>#</th>
                                 <th>Exam Name</th>
                                 <th>Course</th>
                                 <th>Price</th>
@@ -86,7 +86,7 @@
                                 <th>Exam Duration</th>
                                 <th>Total No. of Questions</th>
                                 <th>Pass Percentage</th>
-                                <th>Exam status</th>
+                                <th class="text-center">Exam status</th>
                                 <th class="text-center" colspan="4">Action</th>
                             </tr>
                             {% for i in tutorexams %}
@@ -100,9 +100,9 @@
                                 <td>{{i.question_count}}</td>
                                 <td>{{i.pass_percentage}}</td>
                                 {% if i.status %}
-                                <td><a href="{% url 'tutortoggle' i.id %}" class="btn btn-danger p-1">Deactivate</a></td>
+                                <td class="text-center"><a href="{% url 'tutortoggle' i.id %}" class="btn btn-danger p-1">Deactivate</a></td>
                                 {% else %}
-                                <td><a href="{% url 'tutortoggle' i.id %}" class="btn btn-info p-1">Activate</a></td>
+                                <td class="text-center"><a href="{% url 'tutortoggle' i.id %}" class="btn btn-info p-1">Activate</a></td>
                                 {% endif %}
                                 <td>
                                     <a class="btn btn-warning" href="{% url 'edittutorexams' i.id %}"><i class="flaticon-pencil-line" style="font-size:medium;"></i></a>
