--- a/templates/Institute/institute.html
+++ b/templates/Institute/institute.html
@@ -15,12 +15,13 @@
     {% if INST.student %}
     <div class="row layout-spacing">
         <div class="col-lg-12 col-md-12">
-            <div class="statbox widget box box-shadow">
-                <div class="widget-header">
+            <div class="card statbox widget box box-shadow">
+                <div class="card-header">
                     <div class="row">
-                        <div class="col-xl-12 col-md-12 col-12">
-                            <h3 class="p-2" style="color:black;"><b>Endrolled Institute</b></h3>
+                        <div class="col-sm-10">
+                            <h2 style="color: black;">Endrolled Institute</h2>
                         </div>
+    
                     </div>
                 </div>
                 <div class="widget-content widget-content-area">
@@ -35,7 +36,7 @@
                                 <th>Total Fees</th>
                                 <th>Payed</th>
                                 <th>Balance</th>
-                                <th></th>
+                                <th class="text-center">View</th>
                             </tr>
                             {% for batch in batches %}
                             <tr>
@@ -55,8 +56,8 @@
                                 <td></td>
                                 <td></td>
                                 {% endif %}
-                                <td><a href="{% url 'reviewinstitute' INST.institute.id %}"
-                                        class="btn btn-info btn-rounded">View</a></td>
+                                <td class="text-center"><a href="{% url 'reviewinstitute' INST.institute.id %}"
+                                        class="btn btn-info">View</a></td>
                             </tr>
                             {% endfor %}
                         </table>
@@ -75,18 +76,17 @@
 {% elif INST.teacher %}
 <div class="row layout-spacing">
     <div class="col-lg-12 col-md-12">
-        <div class="statbox widget box box-shadow">
-            <div class="widget-header">
+        <div class="card statbox widget box box-shadow">
+            <div class="card-header">
                 <div class="row">
                     <div class="col-xl-12 col-md-12 col-12">
-                        <h3 class="p-2" style="color:black;"><b>Endrolled Institute</b></h3>
+                        <h2 style="color:black;">Endrolled Institute</h2>
                     </div>
                 </div>
             </div>
             <div class="widget-content widget-content-area">
                 <div class="table-responsive">
-                    <table class="table table-bordered mb-4">
-                        <thead>
+                    <table class="testgrid table table-striped table-bordered table-hover mb-4">
                             <tr>
                                 <th>#</th>
                                 <th>Institute</th>
@@ -94,11 +94,9 @@
                                 <th>Class</th>
                                 <th>Batch</th>
                                 <th>TeachType</th>
-                                <th>availability</th>
-                                <th></th>
+                                <th>Availability</th>
+                                <th class="text-center">View</th>
                             </tr>
-                        </thead>
-                        <tbody>
                             {% for batch,course in batches %}
                             <tr>
                                 <td>{{forloop.counter}}</td>
@@ -108,11 +106,10 @@
                                 <td>{{course.BatchCourse.get.batchName}}</td>
                                 <td>{{batch.teachType}}</td>
                                 <td>{{batch.availability}}</td>
-                                <td><a href="{% url 'reviewinstitute' INST.institute.id %}"
-                                        class="btn btn-info btn-rounded mb-3">View</a></td>
+                                <td class="text-center"><a href="{% url 'reviewinstitute' INST.institute.id %}"
+                                        class="btn btn-info">View</a></td>
                             </tr>
                             {% endfor %}
-                        </tbody>
                     </table>
                     <div class="widget-content widget-content-area text-center">
                         <ul class="pagination pagination-style-1 justify-content-center">
