--- a/templates/Notes/allnotes.html
+++ b/templates/Notes/allnotes.html
@@ -1,14 +1,14 @@
-{% extends 'dashboard/student-dashboard.html' %}
+{% extends template %}
 {% load static %}
 
 {% block main-content %}
-    <main class="mt-5">
-        <div class="col-xl-12 col-md-12 col-12 mt-5">
-            <div class="statbox widget box box-shadow">
-                <div class="widget-header">
+    <main class="mt-5 row">
+        <div class="col-xl-12 col-md-12 col-12">
+            <div class="card widget box box-shadow">
+                <div class="card-header">
                     <div class="row">
                         <div class="col-xl-12 col-md-12 col-12">
-                            <h4 class="p-2" style="color:black;"><b>Notes</b></h4>
+                            <h2 style="color:black;">Notes</h2>
                         </div>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                                 <td><p style="color: black;font-size: 14px;">{{i.subject}}</p></td>
                                 <td>{{i.description}}</td>
                                 <td style="text-align: center;">
-                                   <a class="btn btn-primary" href="{{i.notes.url}}" target="_blank">View Note</a>
+                                   <a class="btn btn-info" href="{{i.notes.url}}" target="_blank">View Note</a>
                                 </td>
                             </tr>
                             {% endfor %}
