--- a/templates/batches/postNotice.html
+++ b/templates/batches/postNotice.html
@@ -113,8 +113,8 @@
 	}
 </style>
 {% endblock %}
-{% block body %}
-<div class="container">
+{% block main-content %}
+<div class="mt-5">
 	{% if messages %}
     {% for k in messages%}
     <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
@@ -125,11 +125,10 @@
     </div>
     {% endfor %}
     {% endif %}
-	<div class="d-flex justify-content-center h-100">
 		<div class="card">
 			<div class="card-header">
 				<div class="row">
-					<div class="col-sm-10"><h2 style="color: rgb(66, 8, 8);">Add Tuition</h2></div>
+					<div class="col-sm-10"><h2 style="color: rgb(66, 8, 8);">Add Notice</h2></div>
 				</div>
 			</div>
 			<div class="card-body container">
@@ -173,6 +172,5 @@
 				</form>
 			</div>
 		</div>
-	</div>
 </div>
 {% endblock %}
