--- a/templates/dashboard/student-dashboard.html
+++ b/templates/dashboard/student-dashboard.html
@@ -25,8 +25,8 @@
   <link href="{% static 'Custum/mystyles.css' %}" rel=" stylesheet" type="text/css" />
   <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   {% block extra-stylesheets %}
-
   {% endblock extra-stylesheets %}
 
   <style>
