--- a/templates/fees/addFees.html
+++ b/templates/fees/addFees.html
@@ -1,6 +1,7 @@
-{% extends 'dashboard/dashboard.html' %}
+{% extends 'dashboard/base.html' %}
 {% load static %}
 {% block css %}
+<style>
 @import url('https://fonts.googleapis.com/css?family=Numans');
 .container{
     height: 100%;
@@ -258,9 +259,10 @@ input:focus{
     overflow-y:scroll;
     width:max-content;
 }
+</style>
 {% endblock %}
-{% block body %}
-<div class="container mt-4">
+{% block main-content %}
+<div class="mt-5">
     {% if messages %}
     {% for k in messages%}
     <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
