--- a/templates/students/addStudents.html
+++ b/templates/students/addStudents.html
@@ -365,7 +365,7 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBJybI10-Xa43-F5GSad1i0Y9W3yqlW6Q&libraries=places&v=3"
   defer></script>
 
-<div class="container">
+<div class="mt-5">
   {% if messages %}
   {% for k in messages%}
   <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
@@ -376,7 +376,6 @@
   </div>
   {% endfor %}
   {% endif %}
-  <div class="d-flex justify-content-center h-100">
     <div class="card">
       <div class="card-header">
         <div class="row">
@@ -536,7 +535,6 @@
         </form>
       </div>
     </div>
-  </div>
 </div>
 
 <script>
