--- a/templates/students/enrolledStudents.html
+++ b/templates/students/enrolledStudents.html
@@ -22,11 +22,11 @@
   {% endif %}
   <div class="row layout-spacing">
     <div class="col-lg-12">
-      <div class="statbox widget box box-shadow">
-        <div class="widget-header border-bottom border-default">
+      <div class="card statbox widget box box-shadow">
+        <div class="card-header border-bottom border-default">
           <div class="row">
             <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-              <h4 style="color:black;"><b>Search Students Near You</b></h4>
+              <h2 style="color:black;">Search Students Near You</h2>
             </div>
           </div>
         </div>
@@ -37,21 +37,21 @@
                 {% csrf_token %}
                 <div class="col-lg-4 col-md-6 col-12 mt-2 row">
                   <label class="control-label col-sm-3 col-md-4 col-5 mt-3" style="display:block; color:black;">Location</label>
-                  <input type="text" class="form-control my-2 w-100 col-sm-9 col-md-8 col-7" id="pac-input" name='loc'
+                  <input type="text" class="form-control my-2 w-100 col-md-7 col-7" id="pac-input" name='loc'
                     placeholder="Enter Location" required value="{{prefill.address}}">
                   <input type="hidden" id="cityLat" value="0" name="cityLat" />
                   <input type="hidden" id="cityLng" value="0" name="cityLng" />
                 </div>
                 <div class="col-lg-4 col-md-6 col-12 mt-2 row">
                   <label class="control-label col-sm-3 col-md-4 col-5 mt-3" style="display:block; color:#000000;">Distance</label>
-                  <input type="number" class="form-control my-2 w-100 col-md-8 col-sm-9 col-7"
+                  <input type="number" class="form-control my-2 w-100 col-md-7 col-7"
                     value="{{prefill.distance}}" style="-moz-appearance: textfield;" min="0" name="distance"
                     placeholder="Distance in KM">
                 </div>
                 <div class="col-lg-4 col-md-6  col-12 mt-2 row">
                   <label class="control-label col-sm-3 col-md-4 col-5 mt-3" style="display:block; color:black;">TeachType</label>
                   <select id="teachtype" name="teachtype" placeholder="Teaching Type"
-                    class="custom-select form-control my-2 w-100 col-sm-9 col-md-8 col-7">
+                    class="custom-select form-control my-2 w-100 col-md-7 col-7">
                     {% if prefill.type %}
                     <option disabled selected value="{{prefill.type}}">{{prefill.type}}</option>
                     {% else %}
@@ -67,7 +67,7 @@
                   <label class="control-label col-sm-3 col-md-4 col-5 mt-3"
                       style="display:block; color:black;">Class</label>
                   <select id="className" name="className"
-                      class="custom-select form-control w-100 col-sm-9 col-md-8 col-7"
+                      class="custom-select form-control w-100 col-md-7 col-7"
                       onchange="subjects()" placeholder="Class">
                   </select>
               </div>
@@ -75,7 +75,7 @@
                 <label class="control-label col-sm-3 col-md-4 mt-3 col-5"
                     style="display:block; color:black;">Subject</label>
                 <select id="subject" name="subject"
-                    class="custom-select form-control w-100 col-md-8 col-sm-9 col-7"
+                    class="custom-select form-control w-100 col-md-7 col-7"
                     placeholder="Subject">
                     {% if prefill.subject %}
                     <option disabled selected value="{{prefill.subject}}">{{prefill.subject}}</option>
@@ -95,11 +95,11 @@
     </div>
   </div>
 </div>
-<div class="container col-sm-12">
-  <div class="row">
+{% if prefill %}
+<div class="row">
     {% if allData %}
     {% for i in allData %}
-    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 layout-spacing">
+    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 layout-spacing"><
       <div class="statbox widget box box-shadow">
         <div class="widget-content widget-content-area product-cat6  px-0 py-0">
           <div class="row">
@@ -110,10 +110,10 @@
                     <div class="col-md-12">
                       {% if i.student.photo %}
                       <img src="{{i.student.photo.url}}" class="img-fluid w-100 text-center" alt="car-1"
-                        style="height:10rem;">
+                        style="height:15rem;">
                       {% else %}
                       <img src="{% static 'default-profile.png' %}" class="img-fluid w-100 text-center" alt="car-1"
-                        style="height:10rem;">
+                        style="height:15rem;">
                       {% endif %}
                     </div>
                     <div class="col-md-12 mt-1 text-center">
@@ -123,11 +123,11 @@
                     <div class="col-md-12 mt-1 text-center" style="color: black;">
                       <div class="row">
                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                          <span>TeachType:</span>
+                          <b>TeachType:</b>
                           <span class="t-s-car-sold-number mb-0 ml-1">{{i.teachingMode}}</span>
                         </div>
                         <div class="col-xl-12 mt-2 col-lg-12 col-md-12 col-sm-12 col-12">
-                          <span>Pay:</span>
+                          <b>Pay:</b>
                           <span class="t-s-car-sold-number mb-0 ml-1">{{i.budgetVal}}</span>
                         </div>
                       </div>
@@ -163,11 +163,11 @@
                     style="height:5rem;width:5rem;" />
                   {% else %}
                   <img id="preview" src="{% static 'default-profile.png' %}" alt="Default Not Found"
-                    style="height:2em; width:2em;">
+                    style="height:5em; width:5em;">
                   {% endif %}
                 </div>
                 <div class="d-flex justify-content-center row my-2">
-                  <button value="{{i.id}}" id="appointmenttutor" type="button"
+                  <button value="{{i.sno}}" id="appointmenttutor" type="button" onclick="newModal(this)"
                     class="btn btn-sm btn-info createAppointment" data-toggle="modal" data-target="#appointmentModal"
                     aria-hidden="true" name="button" style="font-size:smaller;">Schedule Class</button>
                 </div>
@@ -195,31 +195,31 @@
                 <div class="col-md-12">
                   <div class="row">
                     <div class="col-md-6 col-sm-6 col-12">
-                      <span>Subject:</span>
+                      <b>Subject:</b>
                       <span class="ml-1">{{i.subject}}</span>
                     </div>
                     <div class="col-md-6 col-sm-6 col-12 ">
-                      <span>Gender:</span>
+                      <b>Gender:</b>
                       <span class="ml-1">{{i.genderPreference}}</span>
                     </div>
                     <div class="col-md-6 col-sm-6 col-12">
-                      <span>Class:</span>
+                      <b>Class:</b>
                       <span class="ml-1">{{i.forclass}}</span>
                     </div>
                     <div class="col-md-6 col-sm-6 col-12 ">
-                      <span>Start Date:</span>
+                      <b>Start Date:</b>
                       <span class="ml-1">
                         {{i.whenToStart}}
                       </span>
                     </div>
                     <div class="col-md-6 col-sm-6 col-12 ">
-                      <span>Months:</span>
+                      <b>Months:</b>
                       <span class="ml-1">
                         {{i.numberOfSessions}}
                       </span>
                     </div>
                     <div class="col-md-6 col-sm-6 col-12 ">
-                      <span>Fees:</span>
+                      <b>Fees:</b>
                       <span class="ml-1">{{i.budgetVal}}</span>
                     </div>
                     <div class="col-md-12 col-sm-12 col-12">
@@ -236,31 +236,25 @@
       </div>
     </div>
     <!-- appointment modal -->
-    <div class="modal fade" id="appointmentModal" tabindex="-1" role="dialog" aria-labelledby="appointmentModal"
+    <div class="modal fade" id="appointmentModal" tabindex="-1" role="dialog" aria-labelledby="{{i.sno}}"
       aria-hidden="true">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title d-flex justify-content-center col-sm-10"
-              style="color: rgb(66, 8, 8); text-align: center;">Create Appointment</h5>
+            <h5 class="modal-title text-center col-sm-12 col-12"
+              style="text-align: center;">Create Appointment</h5>
           </div>
           <form id="createAppointmentForm" action="" method="post">{% csrf_token %}
             <div class="modal-body">
               <div class="row">
-                <div class="col-sm-1">
-
-                </div>
                 <div class="col-sm-10">
                   <div class="row form-inline">
                     <div class="col-sm-2 bold">
                       Date
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-4">
                       <input style="width: 100%;" class="form-control" type="date" name="date" value="" required
                         id="appointmentdate">
-                    </div>
-                    <div class="col-sm-1">
-
                     </div>
                     <div class="col-sm-2 bold">
                       Time
@@ -276,14 +270,11 @@
                       <div class="col-sm-2 bold">
                         Timezone
                       </div>
-                      <div class="col-sm-3">
+                      <div class="col-sm-4">
                         <select class="form-control col-sm-12" name="timezone" value="" required id="appointmentzone">
                           <option selected disabled>Timezone</option>
                           {% include "teacher/timezoneArea.html" %}
                         </select>
-                      </div>
-                      <div class="col-sm-1">
-
                       </div>
                       <div class="col-sm-2 bold">
                         Duration
@@ -337,31 +328,30 @@
                   <br>
                   <div class="row form-inline">
                     <div class="col-sm-3 bold">
-                      Recurrence :
+                      Recurrence 
                     </div>
                     <div class="col-sm-1">
                       <input id="recurrenceCheck" class="form-check" type="checkbox" name="recc" id="appointmentrecc">
                     </div>
-                    <div class="col-sm-3 bold">
+                  </div>
+                  <br>
+                  <div class="row form-inline">
+                    <div class="col-sm-2 bold">
                       Recurrence Pattern
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-4">
                       <select id="reccPattern" class="form-control reccPattern reccEntry" name="reccPattern" required>
                         <option selected disabled>Choose Reccurence</option>
                         <option value="D">Daily</option>
                         <option value="W">Weekly</option>
                       </select>
                     </div>
-                  </div>
-                  <br>
 
-                    <div class="row form-inline">
-                      <div class="weekSelect col-sm-6 row form-inline">
-                        <div class="col-sm-6 bold">
+                        <div class="col-sm-2 bold">
                           Select WeekDays
                         </div>
-                        <div class="col-sm-6">
-                          <select class="form-control multiselect4 reccWeek reccEntry" name="reccWeek" multiple>
+                        <div class="col-sm-4">
+                          <select class="form-control multiselect4 reccWeek reccEntry w-100" name="reccWeek" multiple>
                             <option value="Sun">Sun</option>
                             <option value="Mon">Mon</option>
                             <option value="Tue">Tue</option>
@@ -371,6 +361,7 @@
                             <option value="Sat">Sat</option>
                           </select>
                         </div>
+                      
                       </div>
                       <br>
                       <!-- <div class="col-sm-12 bold form-inline spacing">
@@ -380,7 +371,6 @@
                         <input class="form-control col-sm-3 reccEntry" type="date" id="endingDate" name="endingDate"
                           value="" disabled>
                       </div> -->
-                    </div>
                   </div>
                 </div>
               </div>
@@ -389,7 +379,6 @@
                 <input id="tutorId" type="hidden" name="tutorId" value="">
                 <button id="submitAppointment" class="btn btn-info" type="button" name="button">Create</button>
               </div>
-            </div>
             <div class="container" style="font-size:small;color:red;">
               <ul id="ErrorList" class="">
               </ul>
@@ -397,7 +386,6 @@
           </form>
         </div>
       </div>
-    </div>
     {% endfor %}
     {% else %}
     <div class="card w-100 h-25 m-0">
@@ -405,6 +393,7 @@
     </div>
     {% endif %}
   </div>
+{% endif %}
 </div>
 <script>
   //Getting Location Autofield from google places API
@@ -453,5 +442,11 @@
     }
     subject.innerHTML = html
   }
+
+  function newModal(el){
+            $(`#StuModal${el.value}`).modal('hide');
+            $(`#appointmentModal${el.value}`).modal('show');
+
+        }
 </script>
 {% endblock main-content %}
