--- a/templates/students/viewStudents.html
+++ b/templates/students/viewStudents.html
@@ -3,7 +3,7 @@
 
 {% block main-content %}
 <main>
-    <div class="container mt-4">
+    <div class="mt-5">
     {% if messages %}
     {% for k in messages%}
     <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
