--- a/templates/teacher/addTutorExist.html
+++ b/templates/teacher/addTutorExist.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/dashboard.html' %}
+{% extends 'dashboard/base.html' %}
 {% load static %}
 {% block css %}
 <style>
@@ -180,11 +180,11 @@
     }
 </style>
 {% endblock %}
-{% block body %}
+{% block main-content %}
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBJybI10-Xa43-F5GSad1i0Y9W3yqlW6Q&libraries=places&v=3"
     defer></script>
 
-<div class="container">
+<div class="mt-5">
     {% if messages %}
     {% for k in messages%}
     <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
@@ -195,7 +195,6 @@
     </div>
     {% endfor %}
     {% endif %}
-    <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
                 <div class="row">
@@ -335,7 +334,7 @@
                 </form>
             </div>
         </div>
-    </div>
+    
 </div>
 <script>
     function clear_all() {
