--- a/templates/teacher/enrolledTutors.html
+++ b/templates/teacher/enrolledTutors.html
@@ -12,13 +12,14 @@
 {% block main-content %}
 <div class="row mt-5 layout-spacing">
     <div class="col-lg-12">
-        <div class="statbox widget box box-shadow">
-            <div class="widget-header border-bottom border-default">
+        <div class="card statbox widget box box-shadow">
+            <div class="card-header">
                 <div class="row">
-                    <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                        <h4 style="color:black;"><b>Search Tutors Near You</b></h4>
+                        <div class="col-sm-10">
+                            <h2 style="color: black;">Search Tutors Near You</h2>
+                        </div>
+    
                     </div>
-                </div>
             </div>
             <div class="widget-content widget-content-area">
                 <div class="row">
@@ -28,7 +29,7 @@
                             <div class="col-lg-4 col-md-6 col-12 mt-2 row">
                                 <label class="control-label col-sm-3 col-md-4 col-5 mt-3"
                                     style="display:block; color:black;">Location</label>
-                                <input type="text" class="form-control my-2 w-100 col-sm-9 col-md-8 col-7"
+                                <input type="text" class="form-control my-2 w-100 col-md-7 col-7"
                                     id="pac-input" name='loc' placeholder="Enter Location" required
                                     value="{{prefill.address}}">
                                 <input type="hidden" id="cityLat" value="0" name="cityLat" />
@@ -37,30 +38,30 @@
                             <div class="col-lg-4 col-md-6 col-12 mt-2 row">
                                 <label class="control-label col-sm-3 col-md-4 col-5 mt-3"
                                     style="display:block; color:black;">Distance</label>
-                                <input type="number" class="form-control my-2 w-100 col-md-8 col-sm-9 col-7"
+                                <input type="number" class="form-control my-2 w-100 col-md-7 col-7"
                                     style="-moz-appearance: textfield;" min="0" name="distance" placeholder="Distance in KM"
                                     value={{prefill.distance}}>
                             </div>
                             <div class="col-lg-4 col-md-6 col-12 mt-2 row">
                                 <label class="control-label col-sm-3 col-md-5 col-5 mt-3"
                                     style="display:block; color:black;">Experience</label>
-                                <input type="number" class="form-control my-2 w-100 col-md-7 col-sm-9 col-7"
+                                <input type="number" class="form-control my-2 w-100 col-md-7 col-7"
                                     style="-moz-appearance: textfield;" min="0" name="experience"
                                     placeholder="Experience" value={{prefill.experience}}>
                             </div>
                             <div class="col-lg-4 col-md-6  col-12 mt-2 row">
-                                <label class="control-label col-sm-3 col-md-4 col-5 mt-3"
+                                <label class="control-label col-sm-3 col-md-4 col-5 mt-2"
                                     style="display:block; color:black;">Class</label>
                                 <select id="className" name="className"
-                                    class="custom-select form-control w-100 col-sm-9 col-md-8 col-7"
+                                    class="custom-select form-control w-100 col-md-7 col-7"
                                     onchange="subjects()" placeholder="Class">
                                 </select>
                             </div>
                             <div class="col-lg-4 col-md-6  col-12 mt-2 row">
-                                <label class="control-label col-sm-3 col-md-4 mt-3 col-5"
+                                <label class="control-label col-sm-3 col-md-4 mt-2 col-5"
                                     style="display:block; color:black;">Subject</label>
                                 <select id="subject" name="subject"
-                                    class="custom-select form-control w-100 col-md-8 col-sm-9 col-7"
+                                    class="custom-select form-control w-100 col-md-7 col-7"
                                     placeholder="Subject">
                                     {% if prefill.subject %}
                                     <option disabled selected value="{{prefill.subject}}">{{prefill.subject}}</option>
@@ -69,9 +70,9 @@
                                     {% endif %}
                                 </select>
                             </div>
-                            <div class="col-lg-4 col-md-6  col-12 text-center">
-                                <button class="my-2 ml-2 btn btn-info">Search</button>
-                            </div>
+                            <div class="col-lg-2 col-md-2 col-12">
+                                <button class="btn btn-info">Search</button>
+                                </div>
                         </form>
                     </div>
                 </div>
@@ -79,6 +80,7 @@
         </div>
     </div>
 </div>
+{% if prefill %}
 <div class="row">
     {% if jsonData %}
     {% for i in jsonData %}
@@ -94,15 +96,15 @@
                                     <div class="col-md-12">
                                         {% if i.photo %}
                                         <img src="{{i.photo}}" class="img-fluid w-100 text-center" alt="car-1"
-                                            style="height:10rem;">
+                                            style="height:15rem;">
                                         {% else %}
                                         <img src="{% static 'default-profile.png' %}"
-                                            class="img-fluid w-100 text-center" alt="car-1" style="height:10rem;">
+                                            class="img-fluid w-100 text-center" alt="car-1" style="height:15rem;">
                                         {% endif %}
                                     </div>
                                     <div class="col-md-12 mt-1 text-center">
                                         <b
-                                            style="text-transform: uppercase; color: black;">{{i.firstName}}{{i.lastName}}</b>
+                                            style="text-transform: uppercase; color: black;">{{i.firstName}} {{i.lastName}}</b>
                                     </div>
                                     <div class="col-md-12 mt-1 text-center" style="color: black;">
                                         <div class="row">
@@ -119,7 +121,7 @@
                                     <div class="col-xl-12 text-center mt-2 mb-2 card-bottom-section">
                                         <button type="button" data-toggle="modal" data-target="#tutorModal{{i.id}}"
                                             class="btn btn-info">View</button>
-                                        <a href="{% url 'reviewtutor' i.id %}" class="btn btn-primary">Reviews</a>
+                                        <a href="{% url 'reviewtutor' i.id %}" class="btn btn-primary">Review</a>
                                     </div>
                                 </div>
                             </div>
@@ -148,11 +150,11 @@
                                     style="height:5rem;width:5rem;" />
                                 {% else %}
                                 <img id="preview" src="{% static 'default-profile.png' %}" alt="Default Not Found"
-                                    style="height:2em; width:2em;">
+                                    style="height:5em; width:5em;">
                                 {% endif %}
                             </div>
                             <div class="d-flex justify-content-center row my-2">
-                                <button value="{{i.id}}" id="appointmenttutor" type="button"
+                                <button value="{{i.id}}" id="appointmenttutor" type="button" onclick="newModal(this)"
                                     class="btn btn-sm btn-info createAppointment" data-toggle="modal"
                                     data-target="#appointmentModal" aria-hidden="true" name="button"
                                     style="font-size:smaller;">Schedule Class</button>
@@ -183,31 +185,31 @@
                             <div class="col-md-12">
                                 <div class="row">
                                     <div class="col-md-6 col-sm-6 col-12">
-                                        <span>Qulification:</span>
+                                        <b>Qulification:</b>
                                         <span class="ml-1">{{i.qualification}}</span>
                                     </div>
                                     <div class="col-md-6 col-sm-6 col-12 ">
-                                        <span>Avalibility:</span>
+                                        <b>Avalibility:</b>
                                         <span class="ml-1">{{i.availability}}</span>
                                     </div>
                                     <div class="col-md-6 col-sm-6 col-12">
-                                        <span>Experience:</span>
+                                        <b>Experience:</b>
                                         <span class="ml-1">{{i.experience}}</span>
                                     </div>
                                     <div class="col-md-6 col-sm-6 col-12 ">
-                                        <span>Course:</span>
+                                        <b>Course:</b>
                                         <span class="ml-1">
                                             {% for course in i.courseName %} {{course}},{% endfor %}
                                         </span>
                                     </div>
                                     <div class="col-md-6 col-sm-6 col-12 ">
-                                        <span>Class:</span>
+                                        <b>Class:</b>
                                         <span class="ml-1">
                                             {{i.forclass|safe}}
                                         </span>
                                     </div>
                                     <div class="col-md-6 col-sm-6 col-12 ">
-                                        <span>Fees:</span>
+                                        <b>Fees:</b>
                                         <span class="ml-1">{{i.fees}}</span>
                                     </div>
                                 </div>
@@ -220,7 +222,7 @@
         </div>
     </div>
     <!-- appointment modal -->
-    <div class="modal fade" id="appointmentModal" tabindex="-1" role="dialog" aria-labelledby="appointmentModal"
+    <div class="modal fade" id="appointmentModal{{i.id}}" tabindex="-1" role="dialog" aria-labelledby="{{i.id}}"
         aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -315,7 +317,7 @@
                                 <br>
                                 <div class="row form-inline">
                                     <div class="col-sm-3 bold">
-                                        Recurrence :
+                                        Recurrence 
                                     </div>
                                     <div class="col-sm-1">
                                         <input id="recurrenceCheck" class="form-check" type="checkbox" name="recc"
@@ -323,47 +325,42 @@
                                     </div>
                                 </div>
                                 <br>
-                                <div>
                                     <div class="row form-inline">
                                         <div class="col-sm-2 bold">
                                             Recurrence Pattern
                                         </div>
                                         <div class="col-sm-4">
-                                            <select class="custom-select form-control w-100" name="reccPattern"
+                                            <select style="width: 100%;" class="custom-select form-control" name="reccPattern"
                                                 required>
                                                 <option value="D">Daily</option>
                                                 <option value="W">Weekly</option>
                                             </select>
                                         </div>
-                                        <div class="weekSelect col-sm-6 form-inline">
-                                            <div class="col-sm-5 bold">
-                                                Select WeekDays
-                                            </div>
-                                            <div class="col-sm-7">
-                                                <select class="custom-select form-control w-100 multiselect4"
-                                                    name="reccWeek" required>
-                                                    <option value="Sun">Sun</option>
-                                                    <option value="Mon">Mon</option>
-                                                    <option value="Tue">Tue</option>
-                                                    <option value="Wed">Wed</option>
-                                                    <option value="Thu">Thu</option>
-                                                    <option value="Fri">Fri</option>
-                                                    <option value="Sat">Sat</option>
-                                                </select>
-                                            </div>
-                                        </div>
+                                        <div class="col-sm-2 bold">
+                                            Select WeekDays
+                                          </div>
+                                          <div class="col-sm-4">
+                                            <select class="form-control multiselect4 reccWeek reccEntry w-100" name="reccWeek" multiple>
+                                              <option value="Sun">Sun</option>
+                                              <option value="Mon">Mon</option>
+                                              <option value="Tue">Tue</option>
+                                              <option value="Wed">Wed</option>
+                                              <option value="Thu">Thu</option>
+                                              <option value="Fri">Fri</option>
+                                              <option value="Sat">Sat</option>
+                                            </select>
+                                          </div>
                                     </div>
                                     <br>
-                                    <div class="row bold">
-                                        <div class="col-sm-12 bold form-inline spacing">
-                                            <div class="col-sm-2">
+                                    <div class="row form-inline">
+                                            <div class="col-sm-2 bold">
                                                 End After
                                             </div>
-                                            <input class="form-control col-sm-4" type="date" id="endingDate"
+                                            <div class="col-sm-4">
+                                            <input class="form-control" type="date" id="endingDate"
                                                 name="endingDate" value="">
-                                        </div>
+                                            </div>
                                     </div>
-                                </div>
                             </div>
                         </div>
                         <br>
@@ -381,6 +378,8 @@
     <div class="card w-100 mx-3">
         <h5 class="mt-2 mb-2 p-2">No Data Found</h5>
     </div>
+    {% endif %}
+</div>
     {% endif %}
     <script>
 
@@ -460,7 +459,6 @@
         });
     </script>
     <script>
-        console.log("this is js")
         var className = document.getElementById("className")
         var jsondata = {{ jsonLocalData| safe}}
         var prefillclass = "{{prefill.class}}"
@@ -490,6 +488,11 @@
                 html += `<option value="${element}">${element}</option>`
             }
             subject.innerHTML = html
+        }
+        function newModal(el){
+            $(`#tutorModal${el.value}`).modal('hide');
+            $(`#appointmentModal${el.value}`).modal('show');
+
         }
     </script>
     {% endblock main-content %}
