--- a/templates/teacher/searchUserTutor.html
+++ b/templates/teacher/searchUserTutor.html
@@ -1,6 +1,7 @@
-{% extends 'dashboard/dashboard.html' %}
+{% extends 'dashboard/base.html' %}
 {% load static %}
 {% block css %}
+<style>
 .table-bordered.red-border, .table-bordered.red-border th, .table-bordered.red-border td {
     border: 1px solid #ff3547!important;
 }
@@ -31,9 +32,10 @@
 .success-text {
     color: #00C851; 
 }
+</style>
 {% endblock %}
-{% block body %}
-        <div class="container mt-4">
+{% block main-content %}
+        <div class="mt-5">
         {% if messages %}
         {% for k in messages%}
         <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
