--- a/templates/teacher/viewAssignmentTutor.html
+++ b/templates/teacher/viewAssignmentTutor.html
@@ -10,13 +10,13 @@
 
 {% endblock extra-stylesheets %}
 {% block main-content %}
-<div class="mt-5">
+<div class="mt-5 row">
   <div class="col-lg-12">
-    <div class="statbox widget box box-shadow">
-      <div class="widget-header border-bottom border-default">
+    <div class="card statbox widget box box-shadow">
+      <div class="card-header border-bottom border-default">
         <div class="row">
           <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-            <h4 style="color:black;"><b>Search Assignments</b></h4>
+            <h2 style="color:black;">Search Assignments</h2>
           </div>
         </div>
       </div>
@@ -26,27 +26,27 @@
             <form class="form-inline mt-2 mb-5" method="POST">
               {% csrf_token %}
               <div class="col-lg-5 col-md-6 col-12 mt-2 row">
-                <label class="control-label col-sm-3 col-md-4 col-5 mt-3" style="display: block; color:black;">Location</label>
-                <input type="text" class="form-control my-2 w-100 col-sm-9 col-md-8 col-7" id="pac-input" name='loc'
+                <label class="control-label col-sm-3 col-5 mt-3" style="display: block; color:black;">Location</label>
+                <input type="text" class="form-control my-2 w-100 col-sm-8 col-7" id="pac-input" name='loc'
                   placeholder="Enter Location" required value="{{prefill.address}}">
                 <input type="hidden" id="cityLat" value="0" name="cityLat" />
                 <input type="hidden" id="cityLng" value="0" name="cityLng" />
               </div>
               <div class="col-lg-5 col-md-6 col-12 mt-2 row">
-                <label class="control-label col-sm-3 col-md-4 col-5 mt-3" style="display: block; color:black;">Budget</label>
-                <input type="number" class="form-control my-2 w-100 col-md-8 col-sm-9 col-7"
+                <label class="control-label col-sm-3 col-5 mt-3" style="display: block; color:black;">Budget</label>
+                <input type="number" class="form-control my-2 w-100 col-sm-8 col-7"
                   style="-moz-appearance: textfield;" min="0" name="budget" value="{{prefill.budget}}"
                   placeholder="Budget">
               </div>
               <div class="col-lg-5 col-md-6  col-12 mt-2 row">
-                <label class="control-label col-sm-3 col-md-4 col-5 mt-3" style="display: block; color:black;">Class</label>
-                <select id="className" name="className" class="custom-select form-control w-100 col-sm-9 col-md-8 col-7"
+                <label class="control-label col-sm-3 col-5 mt-3" style="display: block; color:black;">Class</label>
+                <select id="className" name="className" class="custom-select form-control w-100 col-sm-8 col-7"
                   onchange="subjects()">
                 </select>
               </div>
               <div class="col-lg-5 col-md-6  col-12 mt-2 row">
-                <label class="control-label col-sm-3 col-md-4 mt-3 col-5" style="display: block; color:black;">Subject</label>
-                <select id="subject" name="subject" class="custom-select form-control w-100 col-md-8 col-sm-9 col-7"
+                <label class="control-label col-sm-3 mt-3 col-5" style="display: block; color:black;">Subject</label>
+                <select id="subject" name="subject" class="custom-select form-control w-100 col-sm-8 col-7"
                   placeholder="Subject">
                   {% if prefill.subject %}
                   <option disabled selected value="{{prefill.subject}}">{{prefill.subject}}</option>
@@ -70,7 +70,7 @@
   <div class="table-responsive">
     <table id="htmlgrid" class="testgrid table table-striped table-bordered table-hover mb-4">
       <tr>
-        <th>##</th>
+        <th>#</th>
         <th>Student</th>
         <th>Course</th>
         <th>Class</th>
@@ -78,7 +78,7 @@
         <th>Phone</th>
         <th>Created</th>
         <th>Budget</th>
-        <th></th>
+        <th class="text-center">View</th>
       </tr>
       {% for assing in allData reversed %}
       <tr>
