--- a/templates/tutorials/ArchievedTutorials.html
+++ b/templates/tutorials/ArchievedTutorials.html
@@ -1,7 +1,7 @@
-{% extends 'dashboard/dashboard.html' %}
+{% extends 'dashboard/base.html' %}
 {% load static %}
 {% block css %}
-
+<style>
 .darken-grey-text {
     color: #2E2E2E;
 }
@@ -209,10 +209,20 @@
 .button-3e:hover:after {
     width: 35%;
 }
+</style>
 {% endblock %}
-{% block body %}
-    <main>
-        <div class="container mt-4">
+{% block main-content %}
+    <main>{% if messages %}
+        {% for k in messages%}
+        <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
+            <b>{{ k }} !</b>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+        {% endif %}
+        <div class="mt-5">
             <div class="card mb-4">
                 <div class="card-body">
                     <!-- Grid row -->
