--- a/templates/tutorials/ArchievedTutorialsTutor.html
+++ b/templates/tutorials/ArchievedTutorialsTutor.html
@@ -20,11 +20,11 @@
                         <!--Table head-->
                         <thead>
                             <tr>
-                                <th style="color: black;">##</th>
+                                <th style="color: black;">#</th>
                                 <th style="color: black;">Course Title</th>
                                 <th style="color: black;">Course Duration</th>
                                 <th style="color: black;">Course Fees</th>
-                                <th style="color: black;">Delete</th>
+                                <th class="text-center" style="color: black;">Delete</th>
                                 <th style="color: black;">Remove Archive</th>
                             </tr>
                         </thead>
@@ -38,11 +38,11 @@
                                 
                                 <td>{{i.Duration}} Months</td>
                                 <td>{{i.Fees}}</td>
-                                <td>
+                                <td class="text-center">
                                 <a class="btn btn-danger mx-2" href="{% url 'deletetutorialstutor' i.id %}"><i
                                         class="flaticon-delete-fill" style="font-size:medium;"></i></a>
                                 </td>
-                                <td >
+                                <td class="text-center">
                                     <input type="checkbox" class="bigcheckbox" name="ids" value="{{i.id}}">
                                 </td>
                             </tr>
