--- a/templates/tutorials/addTutorialsInstitute.html
+++ b/templates/tutorials/addTutorialsInstitute.html
@@ -262,7 +262,7 @@ input:focus{
    
 {% endblock %}
 {% block main-content %}
-<div class="container">
+<div class="mt-5">
     {% if messages %}
     {% for k in messages%}
     <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
@@ -273,7 +273,6 @@ input:focus{
     </div>
     {% endfor %}
     {% endif %}
-    <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
                 <div class="row">
@@ -347,13 +346,13 @@ input:focus{
                     </div>
                     <br><br>
                     <div class="form-group text-center">
-                        <input type="submit" value="Add Course" class="btn login_btn form-control">
+                        <input type="submit" value="Add Tutorial" class="btn login_btn form-control">
                     </div>
                 </form>
             </div>
             <br>
         </div>
-    </div>
+    
 </div>
 <script>
     function Enableddl(install)
