--- a/templates/tutorials/watchTutorial.html
+++ b/templates/tutorials/watchTutorial.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/dashboard.html' %}
+{% extends 'dashboard/base.html' %}
 {% load static %}
 {% block css %}
 <style media="screen">
@@ -13,36 +13,25 @@
   }
 </style>
 {% endblock %}
-{% block body %}
+{% block main-content %}
 <main>
-  <div class="container mt-4">
-    {% if messages %}
-    {% for k in messages%}
-    <div class="alert alert-{{k.tags}} alert-dismissible fade show" role="alert">
-      <b>{{ k }} !</b>
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    {% endfor %}
-    {% endif %}
-    <div class="card mb-4">
+  <div class="mt-4">
+    <div class="card">
       <div class="card-body">
-        <div class="row ml-1">
-          <video id="my-video" controls height="364">
+      <div class="row">
+        <div class="col-lg-9 col-md-9 col-12 mt-2">
+          <video id="my-video" class="videoPlayer" controls style="width: 100%;">
             <source id="nowplaying" src="{{start}}" />
           </video>
         </div>
         {% if tutorial.playlist.all %}
-        <div class="row mt-3 ">
-          <div class="col-4">
-            <div id="accordion" style="height: 100%;overflow: scroll;">
-
+          <div class="col-lg-3 col-md-3 col-12 mt-2">
+            <div id="accordion">
               {% for item  in tutorial.playlist.all %}
               <div class="card">
                 <div class="card-header" id="heading">
                   <h5 class="mb-0">
-                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{item.id}}"
+                    <button class="btn btn-info" data-toggle="collapse" data-target="#collapse{{item.id}}"
                       aria-expanded="true" aria-controls="collapseOne">
                       {{ item.Title}}
                     </button>
@@ -53,10 +42,8 @@
                   <div class="card-body">
                     {{item.Description}}
                     <div class="container p-0">
-                      <button class="btn text-dark mr-5" onclick="myFunction('{{item.Video.url}}')"><i
-                          class="fas fa-play" style="font-size:12px;color: black;"></i></button>
-                      <a class="ml-5 pl-5" href="{% url 'editTutorialvideos' item.id %}"><i class="fas fa-edit"></i></a>
-                      <a class="ml-2" href="{% url 'deleteplaylistvideo' item.id %}"><i class="fas fa-trash"></i></a>
+                      <button class="btn btn-warning mr-5" onclick="myFunction('{{item.Video.url}}')"><i
+                          class="flaticon-youtube-play-fill" style="size:2rem;"></i></button>
                     </div>
                   </div>
                 </div>
@@ -64,17 +51,22 @@
               {% endfor %}
             </div>
           </div>
-          <div class="col-8">
-            <div class="jumbotron text-dark">
-              <h2 class="text-dark">Course Content</h2>
-              <p>{{tutorial.playlist.all.count}} lectures • {{total_length}}</p>
-              {{tutorial.Description}}
-            </div>
+          <div class="col-lg-12 col-md-12 card col-12 mt-2" style="border: none;">
+            <h2 class="text-dark">Course Content</h2>
+            <p>{{tutorial.tutorplaylist.all.count}} lectures • {{total_length}}</p>
+            {{tutorial.Description}}
           </div>
         </div>
-        {% endif %}
       </div>
+      {% else %}
+      <div class="card mt-4">
+        <div class="card-body">
+          <h4>Something went wrong</h4>
+        </div>
+      </div>
+      {% endif %}
     </div>
+  </div>
 </main>
 <script>
   function myFunction(data) {
